--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">時は2000年頃、中国地方某所。<br>仲の良い中学生3人がいた。私と〇〇は幼稚園時代からの幼馴染、△△は小学5年生のときに意気投合しそこから3人で仲良くするようになった。</p>
+          <p class="text-center">時は2000年頃、中国地方某所。<br>仲の良い中学生3人がいた。私とあおいは幼稚園時代からの幼馴染、ほのかは小学5年生のときに意気投合しそこから3人で仲良くするようになった。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
