--- a/main.html
+++ b/main.html
@@ -85,9 +85,9 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
-              <div class="clear-message__content">家庭科室の扉が開いた！<br>
-                さぁ先生を助けるため<br>
-                ３つステージの謎をとき、暗号を見つけ出そう！</div>
+              <div class="clear-message__content">アルバムを開いた！<br>
+                アルバムの間に一枚の紙切れがあるのに気付く。それは昔二人で撮った写真だった。それを二人は手に取ると裏に何か文字があるのを見つけた。<br>現像の時の時からある灰色の文字ではなくはっきりとペンで書かれている。そこには「二人で遊んだ場所。三つ」とある。その下の段落、「赤青灰、虫、基地」とある。これは何を意味するのだろうか？<br>
+                もう一人の友達はさっぱり分からず。しかし、主人公は思い当たる節がありもう一人の友達からは「何も分からないし、この部屋にはもう何も無い。おまけにあなたは何か思い当たるものがあるようだからあなたに任せるわ」と行って帰ってしまった。</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
