--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>あおいの部屋から失踪の手がかりを探そう！</h2>
             <p class="text-center">二人は家を訪ねる。初めに彼女の母から「最近様子がおかしい。塞ぎ込んであまり話そうともしなかった。」と言われる。その後彼女の部屋に上がって何か手がかりになる物はないか探すように言われた。そこで二人は部屋の中を探索する。<br>
-              下の画像の謎を解き、鍵のありかをキーワード欄に入力しよう。</p>
+              手がかりになりそうな物を回答欄に入力しよう。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
             <div class="container">
@@ -87,7 +87,7 @@ Youtube貼り付けここまで -->
               <div class="clear-message__title">STAGE：１  クリア！</div>
               <div class="clear-message__content">アルバムを開いた！<br>
                 アルバムの間に一枚の紙切れがあるのに気付く。それは昔二人で撮った写真だった。それを二人は手に取ると裏に何か文字があるのを見つけた。<br>現像の時の時からある灰色の文字ではなくはっきりとペンで書かれている。そこには「二人で遊んだ場所。三つ」とある。その下の段落、「赤青灰、虫、基地」とある。これは何を意味するのだろうか？<br>
-                もう一人の友達はさっぱり分からず。しかし、主人公は思い当たる節がありもう一人の友達からは「何も分からないし、この部屋にはもう何も無い。おまけにあなたは何か思い当たるものがあるようだからあなたに任せるわ」と行って帰ってしまった。</div>
+                もう一人の友達はさっぱり分からず。しかし、主人公は思い当たる節がありもう一人の友達からは「何も分からないし、この部屋にはもう何も無い。おまけにあなたは何か思い当たるものがあるようだからあなたに任せるわ」と行って帰ってしまった。<br>主人公は「赤青灰」を頼りに探していく。そうするうちに自然とたどり着いたのは「橋」であった。そう。その3色のカラーは橋とその周りの色を示すものだった。「赤」は橋・「青」は水面（みなも）・「灰」は河原の土と石のことだった。そのまま土手を下ると橋桁の石の下にメモ書きが。</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
