--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">時は2000年頃、中国地方某所。<br>仲の良い中学生3人がいた。私とあおいは幼稚園時代からの幼馴染、ほのかは小学5年生のときに意気投合しそこから3人で仲良くするようになった。しかし、突然あおいが疾走してしまった...。</p>
+          <p class="text-center">時は2000年頃、中国地方某所。<br>仲の良い中学生3人がいた。私とあおいは幼稚園時代からの幼馴染、ほのかは小学5年生のときに意気投合しそこから3人で仲良くするようになった。そして3人は中学生になってまた新しい思い出を作ろうと約束した。しかし、突然あおいが疾走してしまった...。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
-              <li>今、これを読んだ生徒会メンバー以外を呼んではいけない</li>
-              <li>30分を超えるとS先生は出てこられない</li>
+              <li>友達と共にあおいを探し出せ！！</li>
+              <li>1日経つとあおいはもう帰ってこない...。</li>
             </ul>
           </div>
-          <p class="text-center">いつの間にか、タイマーが起動した。29:58、29:57・・・急がなきゃ。<br>
-            まずはこの暗号を解かなくては！</p>
+          <p class="text-center">早く大切な友達を探さないと！！<br>
+            あおいのテーブルにはいかにもこれがヒントだと言わんばかりに無造作に置かれていた。そこには思い出の写真があった。</p>
         </div>
       </div>
     </section>
