--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <section class="section bg-color--gray">
       <div class="container">
-        <h2 class="section-title">ゲーム開始前の準備</h2>
+        <h2 class="section-title">ゲーム開始前の確認</h2>
         <p class="font-eng text-center">Are you ready for game?</p>
         <!--
           class名"row"内のclass名"column"が横並びになります。
@@ -57,14 +57,14 @@
         <div class="row">
           <div class="column">
             <div class="card">
-              <h3 class="card__title">遊ぶ日時を決めよう！</h3>
-              <p class="card__content">前後の説明、解説をあわせ、想定所要時間は100分〜120分です。途中で中断することもできますが、お時間に余裕があるときにご参加ください。</p>
+              <h3 class="card__title">約5分〜10分を推定して制作しています。</h3>
+              <p class="card__content">このゲームサイトは難易度は優しめに設定してあります。謎解きなどが苦手な方でも楽しめるようなサイトになっているので気楽に楽しんでください。</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">紙とペンを用意しよう！</h3>
-              <p class="card__content">メモをとるための紙と筆記用具をお手元にご準備ください。</p>
+              <h3 class="card__title">友達、周りの人を大切にしていますか？</h3>
+              <p class="card__content">このゲームは友達の友情、感情表現が含まれています。主人公のまいになりきってこのゲームを楽しんでください。</p>
             </div>
           </div>
           <div class="column">
