--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <div class="row">
           <div class="column">
             <div class="card">
-              <h3 class="card__title">約5分〜10分を推定して制作しています。</h3>
+              <h3 class="card__title">約5分〜10分を推定して<br>制作しています。</h3>
               <p class="card__content">このゲームサイトは難易度は優しめに設定してあります。謎解きなどが苦手な方でも楽しめるようなサイトになっているので気楽に楽しんでください。</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">友達、周りの人を大切にしていますか？</h3>
+              <h3 class="card__title">友達、周りの人を<br>大切にしていますか？</h3>
               <p class="card__content">このゲームは友達の友情、感情表現が含まれています。主人公のまいになりきってこのゲームを楽しんでください。</p>
             </div>
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">ブラウザのCookieとキャッシュを<br>削除しよう！</h3>
+              <h3 class="card__title">ブラウザのCookieとキャッシュを<br>削除してください。</h3>
               <p class="card__content">エラーが起きる原因となる恐れがありますので、必ずCookieとキャッシュを削除してからプレイを開始するようにしてください。</p>
             </div>
           </div>
@@ -83,7 +83,7 @@
         <div class="row">
           <div class="column">
             <div class="card">
-              <h3 class="card__title">コミュニケーションツール<br>を用意！</h3>
+              <h3 class="card__title">オンラインの場合<br>コミュニケーションツール<br>を用意してください。</h3>
               <p class="card__content">例：Zoom、LINE通話など<br>
                 カメラはオフにしたままでも参加は可能です。<br>
                 ただ、離れたところにいる仲間と同じ会場で謎解きをしている気持ちになれるので、カメラをオンにしてみんなでわいわいプレイをすることをお勧めします。</p>
