--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">イヤホンを使おう！</h3>
-              <p class="card__content">本ゲームでは、登場人物が会話する動画を見ながら謎解きをします。<br>
-                動画を見るときにイヤホンを使うと、動画の再生中も仲間と会話をしながらプレイができます。<br>
-                ※イヤホンを使用しない場合は、音声をマイクが拾ってしまわないように、動画の再生中は通話ツールのミュート機能をご利用ください。</p>
+              <h3 class="card__title">友達と仲良くプレイしてください。</h3>
+              <p class="card__content">この物語は友情物語です。<br>
+                このストーリーのように友達と協力しあってあおいを救出してください！！</p>
+               
             </div>
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">情報共有はしっかりと！</h3>
-              <p class="card__content">遠くにいる仲間と足並みを揃えて遊びましょう。<br>
-                動画で気になったところ、解けた謎の答えや思いついたことはなんでも共有しましょう！</p>
+              <h3 class="card__title">複数人でやると難易度が変動する場合があります。</h3>
+              <p class="card__content">難易度が優しい設定なので協力よりも対決の方が盛り上がる可能性があります。<br>
+                誰が1番最初に解けるのか対決というやり方もあるので是非そちらも試してみてください。</p>
             </div>
           </div>
         </div>
@@ -109,7 +109,7 @@
     </section>
     <section class="section">
       <div class="container">
-        <a class="btn" href="main.html">準備OK？では、ゲームスタート！！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
+        <a class="btn" href="main.html">それではあおいを救出しまょう！！<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></a>
       </div>
     </section>
   </main>
