--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>封鎖された家庭科室からの脱出 │ Project N</title>
+  <title>疾走したあおいを探し出せ！！ │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -139,7 +139,7 @@ Youtube貼り付けここまで -->
                 </div><!-- /.column -->
                 <!-- STAGE2-1　ここまで -->
 
-<!-- STAGE2-2 を追加
+
 
                 <div class="column">
 
@@ -152,7 +152,7 @@ Youtube貼り付けここまで -->
                 　
                 </div>
 
-2-2追加ここまで -->
+
                   
 <!-- STAGE2-3 を追加
 
