--- a/main.html
+++ b/main.html
@@ -106,8 +106,8 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>メモの謎を解け！</h2>
-              <p class="text-center">導き出される答えを入力しよう！<br>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>写真の裏の謎を解け！！</h2>
+              <p class="text-center">写真の裏には謎の暗号が書かれていた。左から順番に解いていったらあおいの場所がわかるかもしれない！！<br>
                 
             </div>
           </div>
@@ -180,8 +180,8 @@ Youtube貼り付けここまで -->
           <div class="container">
             <div class="clear-message">
               <div class="clear-message__title">STAGE：2　クリア！</div>
-              <div class="clear-message__content">黒板の指示に従い、<br>
-                次のステージの謎を解こう！</div>
+              <div class="clear-message__content">最終的に示していたのは山の奥の廃墟だ！！<br>
+                そこにあおいがいるかもしれない！！</div>
                 <button v-on:click="nextStage('stage2')" onclick="location.href='#sectionStage3'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
@@ -196,10 +196,10 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
-            <p class="text-center">黒板から得たメッセージは、「食物の廃棄問題」だった。<br>
-              どうやら、廃棄にかかる費用がかかりすぎて小学校の運営が厳しくなったようだ。。<br>
-              これらを解決するための最後の謎を解いていこう！</p>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>犯人は誰？</h2>
+            <p class="text-center">廃墟の中にはあおいがいた。<br>
+              どうやらあおいは気づいたらこの廃墟の中にいたそうだ。あおいの近くにはメモが落ちていた。<br>
+              このメモの謎を解けば何かわかるかもしれない！！</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
             </figure>
