--- a/hint2.html
+++ b/hint2.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">テキストテキストテキストテキストテキスト</p>
+              <p class="card__content">〇〇の部分を読んでみると...？</p>
             </div>
               
 
@@ -63,7 +63,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">答え<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">いいい</p>
+              <p class="card__content">神社</p>
             </div>
               
 
