--- a/final.html
+++ b/final.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>封鎖された家庭科室からの脱出 │ Project N</title>
+  <title>失踪したあおいを探し出せ！！ │ Project N</title>
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -17,14 +17,14 @@
   </header>
   <main class="main final-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="assets/images/main-image.png" alt="封鎖された家庭科室からの脱出"></h1>
+    <h1 class="main-title"><img src="twitter_E_FjAlsVgAIkNQS.jpg" alt="失踪したあおいを探し出せ！！"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
-          <p class="text-center">おめでとう！あなたはついに全ての謎を解き、先生を救うことができた！<br>
-            そして先生からあるメッセージが伝えられた・・・</p>
+          <p class="text-center">ほのか...。まさか、大親友のほのかがそんなこと...。<br>
+            後ろから鍵の開く音が聞こえた。そして家に帰ったはずのほのかが二人を襲った。</p>
         </div>
       </div>
     </section>
@@ -44,15 +44,15 @@ Youtube貼り付けここまで-->
           ß
       </div>
          -->
-        <p class="text-center">あなたはきっと、このメッセージをずっと忘れることはないだろう・・・。<br>
-          これからも家庭科室が封鎖されるようなことがあったら、<br>
-          この教訓をしっかり思い出してくれ。</p>
-        <p class="text-center">それでは、また会おう！</p>
+        <p class="text-center">二人は鈍器のようなもので頭を殴られ瀕死状態...。<br>
+          「あなたたち二人が仲が良くてずっと嫉妬してた...。こんなことして本当にごめん...。天国で3人で一緒に仲良く生活しようね...？」<br>
+          ほのかがそういったとき、ほのかの仕業であろう山火事がおきていた。3人は動くことが出来ずにそのまま火の海に飲み込まれた。</p>
+        <p class="text-center">翌日...。その廃墟の中には3人がいたであろう痕跡が残されていた...。</p>
       </div>
     </section>
     <section class="section bg-color--keycolor">
       <div class="container">
-        <h2 class="section-title">遊んでくれてありがとう！</h2>
+        <h2 class="section-title">遊んでくれてありがとうございました！！</h2>
         <p class="font-eng text-center">Special Thanks</p>
         <div class="row">
           <div class="column">
@@ -64,9 +64,9 @@ Youtube貼り付けここまで-->
           <div class="column">
             <div class="card">
               <h3 class="card__title">このゲームの企画者</h3>
-              <p class="card__content">企画・制作メンバーの紹介など。<br>
-                テキストテキストテキストテキストテキストテキストテキスト<br>
-                テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+              <p class="card__content">企画・制作メンバーの紹介<br>
+                サイト作成<br>
+                堀本怜央・　<br>デザイン制作<br>  <br>謎・ストーリー制作<br>  </p>
             </div>
           </div>
         </div>
