--- a/final.html
+++ b/final.html
@@ -24,7 +24,7 @@
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
           <p class="text-center">ほのか...。まさか、大親友のほのかがそんなこと...。<br>
-            後ろから鍵の開く音が聞こえた。そして家に帰ったはずのほのかが二人を襲った。</p>
+            後ろから鍵の開く音が聞こえた。そして家に帰ったはずのほのかが2人を襲った。</p>
         </div>
       </div>
     </section>
@@ -45,7 +45,7 @@ Youtube貼り付けここまで-->
       </div>
          -->
         <p class="text-center">二人は鈍器のようなもので頭を殴られ瀕死状態...。<br>
-          「あなたたち二人が仲が良くてずっと嫉妬してた...。こんなことして本当にごめん...。天国で3人で一緒に仲良く生活しようね...？」<br>
+          「あなたたち2人が仲が良くてずっと嫉妬してた...。こんなことして本当にごめん...。天国で3人で一緒に仲良く生活しようね...？」<br>
           ほのかがそういったとき、ほのかの仕業であろう山火事がおきていた。3人は動くことが出来ずにそのまま火の海に飲み込まれた。</p>
         <p class="text-center">翌日...。その廃墟の中には3人がいたであろう痕跡が残されていた...。</p>
       </div>
