--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="twitter_E_FjAlsVgAIkNQS.jpg" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ 失踪したあおいを探し出せ！！"></h1>
+    <h1 class="main-title"><img src="iOS の画像.jpg" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ 失踪したあおいを探し出せ！！"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
