--- a/hint1.html
+++ b/hint1.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main hint-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="twitter_E_FjAlsVgAIkNQS.jpg" alt="失踪したあおいを探し出せ！！"></h1>
+    <h1 class="main-title"><img src="iOS の画像.jpg" alt="失踪したあおいを探し出せ！！"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section">
       <div class="container">
