--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main main-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="iOS の画像.jpg" alt="失踪したあおいを探し出せ！！"></h1>
+    <h1 class="main-title"><img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/iOS%20%E3%81%AE%E7%94%BB%E5%83%8F.jpg?raw=true" alt="失踪したあおいを探し出せ！！"></h1>
     <!-- タイトルエリア　ここまで -->
     <div id="stage">
 
