--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <main class="main index-page">
     <!-- タイトルエリア　ここから -->
-    <h1 class="main-title"><img src="タイトル.jpg" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ 失踪したあおいを探し出せ！！"></h1>
+    <h1 class="main-title"><img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/%E3%82%BF%E3%82%A4%E3%83%88%E3%83%AB.jpg?raw=true" alt="Presented by SCRAP×N・S高リアル脱出ゲーム制作PJ 失踪したあおいを探し出せ！！"></h1>
     <!-- タイトルエリア　ここまで -->
     <section class="section section--story">
       <div class="container">
