--- a/main.html
+++ b/main.html
@@ -198,7 +198,7 @@ Youtube貼り付けここまで -->
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>犯人は誰？</h2>
             <p class="text-center">廃墟の中にはあおいがいた。<br>
-              どうやらあおいは気づいたらこの廃墟の中にいたそうだ。あおいの近くにはメモが落ちていた。<br>
+              どうやらあおいは気づいたらこの廃墟の中にいたそうだ。そして後ろから鍵が閉まる音が聞こえた。誰かが2人を閉じ込めたみたいだ。あおいの近くにはメモが落ちていた。<br>
               このメモの謎を解けば何かわかるかもしれない！！</p>
             <figure class="image__container">
               <img src="assets/images/stage.png" alt="">
