--- a/main.html
+++ b/main.html
@@ -144,7 +144,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
 
                   <figure class="image__container">
-                    <img src="assets/images/stage.png" alt="">
+                    <img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/twitter_E_OfUFHVUAUZVCb.jpg?raw=true" alt="">
                   </figure>
 
                   <answer-input v-bind:correct="correctAnswer['stage2']['q2']" v-on:answer-input="answerInput($event, 'stage2', 2)"></answer-input>
