--- a/main.html
+++ b/main.html
@@ -201,7 +201,7 @@ Youtube貼り付けここまで -->
               どうやらあおいは気づいたらこの廃墟の中にいたそうだ。そして後ろから鍵が閉まる音が聞こえた。誰かが2人を閉じ込めたみたいだ。あおいの近くにはメモが落ちていた。<br>
               このメモの謎を解けば何かわかるかもしれない！！</p>
             <figure class="image__container">
-              <img src="assets/images/stage.png" alt="">
+              <img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/twitter_E_OiYipVcAQrCuM.jpg?raw=true" alt="">
             </figure>
           </div>
         </section>
