--- a/final.html
+++ b/final.html
@@ -31,7 +31,7 @@
     <section class="section">
       <div class="container">
           <figure class="image__container">
-             <img src="assets/images/stage.png" alt="">
+             <img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/twitter_E_Op4y1VEAI52O6.jpg?raw=true" alt="">
           </figure>
 
 <!--  YouTube貼り付け
