--- a/final.html
+++ b/final.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header__logo"><img src="assets/images/logo.svg" alt="チームロゴ"></div>
+      <div class="header__logo"><img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/twitter_E_OjRFBVUAM9ZB2.jpg?raw=true" alt="チームロゴ"></div>
       <div class="header__name">N・S高生制作サイト</div>
     </div>
   </header>
