--- a/hint3.html
+++ b/hint3.html
@@ -42,7 +42,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">この感じどっかでみたような...。<br>曜日とか日にちとかを見るやつに似てるような...。</p>
+              <p class="card__content">キーボードを見てみると...？</p>
             </div>
               
  <!-- 3-2ヒント追加
