--- a/hint2.html
+++ b/hint2.html
@@ -48,7 +48,7 @@
 
             <div class="card">
               <h3 class="card__title">2-2ヒント<svg class="card__arrow"><use xlink:href="#arrow"></use></svg></h3>
-              <p class="card__content">順番を並べ替えると...？</p>
+              <p class="card__content">おみくじの運勢順に並べ替えると...？</p>
             </div>
 
 
