--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <h2 class="section-title section-title--keycolor section-title--story">ストーリー</h2>
         <div class="story">
-          <p class="text-center">時は2000年頃、中国地方某所。<br>仲の良い中学生3人がいた。私とあおいは幼稚園時代からの幼馴染、ほのかは小学5年生のときに意気投合しそこから3人で仲良くするようになった。そして3人は中学生になってまた新しい思い出を作ろうと約束した。しかし、突然あおいが疾走してしまった...。</p>
+          <p class="text-center">時は2000年頃、中国地方某所。<br>仲の良い中学生3人がいた。私とあおいは幼稚園時代からの幼馴染、ほのかは小学5年生のときに意気投合しそこから3人で仲良くするようになった。そして3人は中学生になってまた新しい思い出を作ろうと約束した。しかし、突然あおいが失踪してしまった...。</p>
           <div class="story__note__outer bg-color--gray">
             <ul class="story__note">
               <li>友達と共にあおいを探し出せ！！</li>
@@ -37,7 +37,7 @@
             </ul>
           </div>
           <p class="text-center">早く大切な友達を探さないと！！<br>
-            あおいのテーブルにはいかにもこれがヒントだと言わんばかりに無造作に置かれていた。そこには思い出の写真があった。</p>
+            あおいのテーブルにはいかにもこれがヒントだと言わんばかりに無造作に置かれていた。そこには思い出のアルバムがあった。</p>
         </div>
       </div>
     </section>
