--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
           </div>
           <div class="column">
             <div class="card">
-              <h3 class="card__title">友達と仲良くプレイしてください。</h3>
+              <h3 class="card__title">お友達と仲良くプレイしてください。</h3>
               <p class="card__content">この物語は友情物語です。<br>
-                このストーリーのように友達と協力しあってあおいを救出してください！！</p>
+                この3人の絆のようにお友達と仲良く協力しあってプレイしてください。お友達と新しい思い出をこのゲームを通して作ってもらえたら幸いです。</p>
                
             </div>
           </div>
