--- a/final.html
+++ b/final.html
@@ -66,7 +66,7 @@ Youtube貼り付けここまで-->
               <h3 class="card__title">このゲームの企画者</h3>
               <p class="card__content">企画・制作メンバーの紹介<br>
                 サイト作成<br>
-                堀本怜央・　<br>デザイン制作<br>  <br>謎・ストーリー制作<br>  </p>
+                堀本・森川　<br>デザイン制作<br>齋藤<br>謎・ストーリー制作<br>坂本</p>
             </div>
           </div>
         </div>
