--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
         <section class="section">
           <div class="container">
             <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>あおいの部屋から失踪の手がかりを探そう！</h2>
-            <p class="text-center">二人は家を訪ねる。初めに彼女の母から「最近様子がおかしい。塞ぎ込んであまり話そうともしなかった。」と言われる。その後彼女の部屋に上がって何か手がかりになる物はないか探すように言われた。そこで二人は部屋の中を探索する。<br>
+            <p class="text-center">二人は家を訪ねる。初めにあおいの母から「最近様子がおかしい。塞ぎ込んであまり話そうともしなかった。」と言われる。その後彼女の部屋に上がって何か手がかりになる物はないか探すように言われた。そこで二人は部屋の中を探索する。<br>
               手がかりになりそうな物を回答欄に入力しよう。</p>
             <p class="text-center">困ったときは、ヒントがある。なるべく見ないようにゲームを進めていこう。</p>
   
