--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
   
             <div class="container">
               <figure class="image__container">
-                <img src="assets/images/aoisroom.jpeg" alt="">
+                <img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/twitter_E_P2O9CVgAEUxcn.jpg?raw=true" alt="">
               </figure>
                 
  <!--  YouTube貼り付け
