--- a/main.html
+++ b/main.html
@@ -86,8 +86,8 @@ Youtube貼り付けここまで -->
             <div class="clear-message">
               <div class="clear-message__title">STAGE：１  クリア！</div>
               <div class="clear-message__content">アルバムを開いた！<br>
-                アルバムの間に一枚の紙切れがあるのに気付く。それは昔二人で撮った写真だった。それを二人は手に取ると裏に何か文字があるのを見つけた。<br>現像の時の時からある灰色の文字ではなくはっきりとペンで書かれている。そこには「二人で遊んだ場所。三つ」とある。その下の段落、「赤青灰、虫、基地」とある。これは何を意味するのだろうか？<br>
-                もう一人の友達はさっぱり分からず。しかし、主人公は思い当たる節がありもう一人の友達からは「何も分からないし、この部屋にはもう何も無い。おまけにあなたは何か思い当たるものがあるようだからあなたに任せるわ」と行って帰ってしまった。<br>主人公は「赤青灰」を頼りに探していく。そうするうちに自然とたどり着いたのは「橋」であった。そう。その3色のカラーは橋とその周りの色を示すものだった。「赤」は橋・「青」は水面（みなも）・「灰」は河原の土と石のことだった。そのまま土手を下ると橋桁の石の下にメモ書きが。</div>
+                アルバムの間に一枚の紙切れがあるのに気付く。それはあおいの文字で書いてあるメモだった。<br>「私を探さないでください。思い出の場所を巡ってきます。それで私は...。」それでメモは終わっている。<br>
+                このままだとあおいが何かしかねないと思った2人は絶対に探し出すべく、ほのかは町の方へ探しに行った。<br>まいは思い出の場所というキーワードからアルバムの中をみるとそこには思い出の写真たちが。1番上にあった川沿いの方へまいは向かった。</div>
               <button v-on:click="nextStage('stage1')" onclick="location.href='#sectionStage2'" class="clear-message__btn btn">次のステージへ<svg class="btn__arrow"><use xlink:href="#arrow"></use></svg></button>
             </div>
           </div>
