--- a/main.html
+++ b/main.html
@@ -129,7 +129,7 @@ Youtube貼り付けここまで -->
                 <div class="column">
                   <!-- STAGE2-1問題セクション　ここから -->
                   <figure class="image__container">
-                    <img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/twitter_E_OfUFHVIAIDlNv.jpg?raw=true" alt="">
+                    <img src="https://github.com/rekaomizuki/alfa-omiya-2/blob/main/assets/images/iOS%20%E3%81%AE%E7%94%BB%E5%83%8F%20(1).jpg?raw=true" alt="">
                   </figure>
                   <!-- STAGE2-1問題セクション　ここまで -->
                   <!-- STAGE2-1解答入力セクション　ここから -->
