--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="column">
             <div class="card">
               <h3 class="card__title">約5分〜10分を推定して<br>制作しています。</h3>
-              <p class="card__content">このゲームサイトは難易度は優しめに設定してあります。謎解きなどが苦手な方でも楽しめるようなサイトになっているので気楽に楽しんでください。</p>
+              <p class="card__content">このゲームサイトは難易度は易しいに設定してあります。謎解きなどが苦手な方でも楽しめるようなサイトになっているので気楽に楽しんでください。</p>
             </div>
           </div>
           <div class="column">
