--- a/final.html
+++ b/final.html
@@ -24,7 +24,7 @@
         <div class="box bg-color--subcolor">
           <h2 class="section-title--border">全ステージ クリア！</h2>
           <p class="text-center">ほのか...。まさか、大親友のほのかがそんなこと...。<br>
-            後ろから鍵の開く音が聞こえた。そして家に帰ったはずのほのかが2人を襲った。</p>
+            後ろから鍵の開く音が聞こえた。そして町の中を探しに行ったはずのほのかが2人を襲った。</p>
         </div>
       </div>
     </section>
